# genetic-algorithm

./: .gitignore  CMakeLists.txt  genetic-algorithm.pro  main.cpp
model/: genetic_algorithm.hpp  stochastic.hpp
model/example/: nqueens.hpp  travelling_salesman.hpp
view/: MainWindow.cpp  MainWindow.hpp
